--- a/Assignment2/.vscode/settings.json
+++ b/Assignment2/.vscode/settings.json
@@ -22,5 +22,6 @@
         "xlocinfo": "cpp",
         "xmemory": "cpp",
         "xtree": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
